# ForgeOS

./: .gitignore  CHANGELOG.md  LICENSE  README.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: AMENDMENT-advisory-system.md  AMENDMENT-v1-scope.md  ARCHITECTURE.md  AUDIT-V1-readiness.md  AUDIT-mcp-skill.md  HANDOFF.md  IMPLEMENTATION_PLAN.md  PLAN-P6.6-advisory-intelligence.md  PLAN-V2-execution-intelligence.md  RELEASE-CHECKLIST-v1.md  REVIEW-and-PLAN-P7.md  ROADMAP.md  SCOPE-V1.md
docs/adr/: 0000-template.md  0001-hexagonal-architecture.md  0002-storage-sqlite-yaml.md  0003-graph-first-retrieval.md  0004-providers-claude-ollama.md  0005-repo-intel-deterministic-provider-free.md  0006-toolchain.md  0007-mcp-stdio-only-v1.md  0008-generic-record-store.md  0009-deterministic-provider-free-compression.md  0010-advisory-system.md  0011-advisory-grounding.md  0012-v1-scope-decision.md  0013-mcp-v2-readonly-phase1.md  0014-mcp-advisory-context-host-reasoning.md  0015-execution-intelligence.md  0016-ownership-declared-vs-observed.md  0017-dataflow-e5a.md  0018-dataflow-e5b1-typed-edges.md  0019-dataflow-e5b2-lineage.md
docs/reports/: P-V1-doc-reconciliation.md  P-V1-learning-skill-cli.md  P-V1-learning-workflow.md  P-V1-portability-cli.md  P-V1.1-usability.md
docs/schemas/: knowledge_card.schema.json
scripts/: check.py  forgeos-sync-hook.sh
src/forgeos/: __init__.py  _ids.py  _time.py  catalog.py
src/forgeos/adapters/: __init__.py
src/forgeos/adapters/providers/: __init__.py  claude.py  factory.py  metered.py  ollama.py  stubs.py
src/forgeos/adapters/storage/: __init__.py
src/forgeos/adapters/tokenizer/: __init__.py  local.py
src/forgeos/adapters/transport/: __init__.py
src/forgeos/config/: __init__.py  loader.py  models.py
src/forgeos/core/: __init__.py
src/forgeos/core/advisory/: __init__.py  auditor.py  context.py  mentor.py  models.py  session.py
src/forgeos/core/compression/: __init__.py  generator.py  models.py  schema.py
src/forgeos/core/context_assembly/: __init__.py  assembler.py  models.py
src/forgeos/core/dataflow_intel/: __init__.py  anchors.py  engine.py  extract.py  lineage.py  models.py  query.py  store.py
src/forgeos/core/exec_intel/: __init__.py  calls.py  engine.py  models.py  query.py  store.py  symbols.py
src/forgeos/core/graph/: __init__.py  models.py  registry.py  store.py
src/forgeos/core/learning/: __init__.py  proposal.py  service.py
src/forgeos/core/memory/: __init__.py  lifecycle.py  models.py  service.py
src/forgeos/core/orchestrator/: __init__.py  agents.py  merge.py  runner.py
src/forgeos/core/ownership_intel/: __init__.py  classifier.py  models.py  rules.py  summary.py
src/forgeos/observability/: __init__.py  logging.py
src/forgeos/ports/: __init__.py  provider.py  storage.py  tokenizer.py  transport.py  vector.py
src/forgeos/services/: __init__.py  portability.py
src/forgeos/testing/: __init__.py  fakes.py  guards.py
tests/: conftest.py
tests/fixtures/: golden_loader.py
tests/fixtures/golden/: MANIFEST.yaml  README.md
tests/unit/: test_advisory_boundaries.py  test_advisory_cli.py  test_advisory_context.py  test_advisory_graph_registry.py  test_advisory_grounding.py  test_advisory_mentor_auditor.py  test_advisory_session.py  test_card_generator.py  test_card_schema.py  test_cli.py  test_config_loader.py  test_context_assembler.py  test_data_flow.py  test_exec_calls.py  test_exec_intel.py  test_exec_mcp.py  test_exec_query.py  test_exec_scan_cli.py  test_fakes.py  test_flow_impact.py  test_golden_corpus.py  test_graph_cli.py  test_graph_registry.py  test_graph_snapshot.py  test_graph_store.py  test_ids.py  test_import_guard.py  test_installer.py  test_learning_cli.py  test_learning_workflow.py  test_lineage.py  test_mcp_dataflow.py  test_mcp_ownership.py  test_mcp_parity.py  test_mcp_tools.py  test_memory_cli.py  test_memory_lifecycle.py  test_memory_models.py  test_memory_service.py  test_metered_and_factory.py  (+28 more)
(+50 files in other folders)
